--- a/LeetCode/130.Surrounded_Regions.md
+++ b/LeetCode/130.Surrounded_Regions.md
@@ -6,13 +6,20 @@ A region is captured by flipping all 'O's into 'X's in that surrounded region.
 
 Example:
 
-var test = [['X', 'X', 'X', 'X'], ['X', 'O', 'O', 'X'], ['X', 'X', 'O', 'X'], ['X', 'O', 'X', 'X']]
+[['X', 'X', 'X', 'X'], ['X', 'O', 'O', 'X'], ['X', 'X', 'O', 'X'], ['X', 'O', 'X', 'X']]
 
 ```js
 X X X X
 X O O X
 X X O X
 X O X X
+```
+
+```js
+X X X X
+X O O X
+X X O X
+X - X X
 ```
 
 After running your function, the board should be:
@@ -28,7 +35,30 @@ Explanation:
 
 `Surrounded regions shouldn’t be on the border`, which means that any 'O' on the border of the board are not flipped to 'X'. `Any 'O' that is not on the border and it is not connected to an 'O' on the border will be flipped to 'X'`. Two cells are connected if they are adjacent cells connected horizontally or vertically.
 
+Example:
+
+var test = [["O","O","O"],["O","O","O"],["O","O","O"]]
+
+```js
+O O O
+O O O
+O O O
+```
+
+After running your function, the board should be:
+
+```js
+O O O
+O O O
+O O O
+```
+
 ### Analyze
+
+* 分析终止迭代(不合法)的条件
+  1. m, n 坐标已经使用过;
+  2. m, n 坐标位于边界而且 board[m][n] 为 'O'
+  3. board[m][n] 为 'X'
 
 ```js
 /**
@@ -58,27 +88,74 @@ var isValid = (board, m, n, used) => {
 }
 
 // judge if it is in board
-var isInBoard = (m, n, board) => m === 0 || n === 0 || m === board.length || n === board[0].length
+var isInBoard = (m, n, board) => m === 0 || n === 0 || m === board.length - 1 || n === board[0].length - 1
 
 var recursive = function(board, m, n, used) {
-  console.log('m', m, 'n', n)
-  // if the last m,n is in board && board[m][n] === 'O', end it.
+  // end condition.
   if (!isValid(board, m, n, used) || (isInBoard(m, n, board) && board[m][n] === 'O') || board[m][n] === 'X') {
     return false
   }
   for (let i = 0; i < direction.length; i++) {
     const tag = recursive(board, m + direction[i][0], n + direction[i][1], used)
+    // recursive to set value
     if (tag && board[m][n] === 'O') {
       board[m][n] = 'X'
     }
-    // todo: 若四周都不合理, 前 borad[m][n] === 'O', 则要让 board[m][n] = 'X'
+    // 若不在边界的坐标 m,n 四周的值都不合理, 且 borad[m][n] === 'O', 则要让 board[m][n] = 'X'
+    // todo: board[m][n - 1] === 'O'
+    if (i === 3 && !isInBoard(m, n, board) && board[m][n] === 'O') {
+      board[m][n] = 'X'
+    }
   }
   return true
 }
 ```
 
-* 最后边界如何处理, 除了 tag 以外。
-* 取 borar[m][n]
+「若不在边界的坐标 m,n 四周的值都不合理, 且 borad[m][n] === 'O', 则要让 board[m][n] = 'X'」, 这个条件在如下测试用例面前是过不去的砍👀
+
+```
+O O O
+O O O
+O O O
+```
+
+观察评论区调整了下思路:
+
+1. 将边界的 O 以及与其相连的 O 标记为 `_`。
+2. 遍历节点
+   1. 将剩余的 O 全部替换为 X。
+   2. 将全部的 _ 替换为 0。
+
+```js
+/**
+ * @param {character[][]} board
+ * @return {void} Do not return anything, modify board in-place instead.
+ */
+var solve = function(board) {
+  const used = []
+  for (let m = 0; m < board.length; m++) {
+    for (let n = 0; n < board[m].length; n++) {
+      if (isInBoard(m, n, board) && border[m][n] === 'O') {
+        replaceWith_(m, n, board)
+      }
+    }
+  }
+  return board
+};
+
+// judge if it is in board
+var isInBoard = (m, n, board) => m === 0 || n === 0 || m === board.length - 1 || n === board[0].length - 1
+
+var direction = [[1, 0], [0, 1], [-1, 0], [0, -1]] // 下、右、上、左
+
+var replaceWith_ = (m, n, board) => {
+  board[m][n] = 'X'
+
+  for (let i = 0; i < direction.length; i++) {
+    replaceWith_(m + direction[i][0], n + direction[i][1], board)
+  }
+}
+```
 
 ### Sister Title
 
