--- a/LeetCode/130.Surrounded_Regions.md
+++ b/LeetCode/130.Surrounded_Regions.md
@@ -88,11 +88,11 @@ var isValid = (board, m, n, used) => {
 }
 
 // judge if it is in board
-var isInBoard = (m, n, board) => m === 0 || n === 0 || m === board.length - 1 || n === board[0].length - 1
+var isInBorder = (board, m, n) => m === 0 || n === 0 || m === board.length - 1 || n === board[0].length - 1
 
 var recursive = function(board, m, n, used) {
   // end condition.
-  if (!isValid(board, m, n, used) || (isInBoard(m, n, board) && board[m][n] === 'O') || board[m][n] === 'X') {
+  if (!isValid(board, m, n, used) || (isInBorder(board, m, n) && board[m][n] === 'O') || board[m][n] === 'X') {
     return false
   }
   for (let i = 0; i < direction.length; i++) {
@@ -103,7 +103,7 @@ var recursive = function(board, m, n, used) {
     }
     // 若不在边界的坐标 m,n 四周的值都不合理, 且 borad[m][n] === 'O', 则要让 board[m][n] = 'X'
     // todo: board[m][n - 1] === 'O'
-    if (i === 3 && !isInBoard(m, n, board) && board[m][n] === 'O') {
+    if (i === 3 && !isInBorder(board, m, n) && board[m][n] === 'O') {
       board[m][n] = 'X'
     }
   }
@@ -124,7 +124,9 @@ O O O
 1. 将边界的 O 以及与其相连的 O 标记为 `_`。
 2. 遍历节点
    1. 将剩余的 O 全部替换为 X。
-   2. 将全部的 _ 替换为 0。
+   2. 将全部的 _ 替换为 O。
+
+> 点子比行动更重要！
 
 ```js
 /**
@@ -135,8 +137,19 @@ var solve = function(board) {
   const used = []
   for (let m = 0; m < board.length; m++) {
     for (let n = 0; n < board[m].length; n++) {
-      if (isInBoard(m, n, board) && border[m][n] === 'O') {
-        replaceWith_(m, n, board)
+      if (isInBorder(m, n, board) && board[m][n] === 'O') {
+        replaceWith_(board, m, n, used)
+      }
+    }
+  }
+
+  for (let m = 0; m < board.length; m++) {
+    for (let n = 0; n < board[m].length; n++) {
+      if (board[m][n] === 'O') {
+        board[m][n] = 'X'
+      }
+      if (board[m][n] === '_') {
+        board[m][n] = 'O'
       }
     }
   }
@@ -144,15 +157,25 @@ var solve = function(board) {
 };
 
 // judge if it is in board
-var isInBoard = (m, n, board) => m === 0 || n === 0 || m === board.length - 1 || n === board[0].length - 1
+var isInBorder = (m, n, board) => m === 0 || n === 0 || m === board.length - 1 || n === board[0].length - 1
+
+var isValid = (board, m, n, used) => {
+  if (!board[m] || !board[m][n]) return false
+  const notUsed = used.indexOf(`${m},${n}`) === -1
+  used.push(`${m},${n}`)
+  return notUsed
+}
 
 var direction = [[1, 0], [0, 1], [-1, 0], [0, -1]] // 下、右、上、左
 
-var replaceWith_ = (m, n, board) => {
-  board[m][n] = 'X'
+var replaceWith_ = (board, m, n, used) => {
+  if (!isValid(board, m, n, used) || board[m][n] === 'X') return
+  if (board[m][n] === 'O') {
+    board[m][n] = '_'
+  }
 
   for (let i = 0; i < direction.length; i++) {
-    replaceWith_(m + direction[i][0], n + direction[i][1], board)
+    replaceWith_(board, m + direction[i][0], n + direction[i][1], used)
   }
 }
 ```
