docs: 为什么书呆子不受欢迎

--- a/LeetCode/417.Pacific_Atlantic_Water_Flow.md
+++ b/LeetCode/417.Pacific_Atlantic_Water_Flow.md
@@ -4,12 +4,11 @@ Given an `m x n` matrix of non-negative integers representing the height of each
 
 Water can only flow in four directions (up, down, left, or right) `from a cell to another one with height equal or lower`.
 
-Find the list of grid coordinates where water can flow to both the Pacific and Atlantic ocean.
+Find the list of grid coordinates `where water can flow to both the Pacific and Atlantic ocean`.
 
 Note:
-
-The order of returned grid coordinates does not matter.
-Both m and n are less than 150.
+* The order of returned grid coordinates does not matter.
+* Both m and n are less than 150.
 
 Example:
 
