--- a/LeetCode/417.Pacific_Atlantic_Water_Flow.md
+++ b/LeetCode/417.Pacific_Atlantic_Water_Flow.md
@@ -13,7 +13,7 @@ Note:
 Example:
 
 ```js
-Given the following 5x5 matrix:
+Given the following 5 x 5 matrix:
 
   Pacific ~   ~   ~   ~   ~
        ~  1   2   2   3  (5) *
@@ -36,6 +36,28 @@ Return:
  * @return {number[][]}
  */
 var pacificAtlantic = function(matrix) {
-
+  const result = []
+  const used = []
+  for (let m = 0; m < matrix.length; m++) {
+    for (let n = 0; n < matrix[m].length; n++) {
+      iterator(matrix, m, n, used, result)
+    }
+  }
 };
+
+var directions = [[1, 0], [0, 1], [-1, 0], [0, -1]] // bottom、right、top、left
+
+var iterator = function(matrix, m, n, used, result) {
+  for (let i = 0; i < directions.length; i++) {
+    // todo
+  }
+}
+
+var ifReachPacific = function(m, n) {
+  return m === 0 || n === 0
+}
+
+var ifReachAtlantic = function(matrix, m, n) {
+  return m === matrix.length || n === matrix[0].length
+}
 ```
