--- a/LeetCode/417.Pacific_Atlantic_Water_Flow.md
+++ b/LeetCode/417.Pacific_Atlantic_Water_Flow.md
@@ -1,6 +1,6 @@
 ### 417. Pacific Atlantic Water Flow
 
-Given an `m x n` matrix of non-negative integers representing the height of each unit cell in a continent, the "Pacific ocean" touches the left and top edges of the matrix and the "Atlantic ocean" touches the right and bottom edges.
+Given an `m x n` matrix of non-negative integers representing the height of each unit cell in a continent, `the "Pacific ocean" touches the left and top edges of the matrix` and `the "Atlantic ocean" touches the right and bottom edges`.
 
 Water can only flow in four directions (up, down, left, or right) `from a cell to another one with height equal or lower`.
 
@@ -30,6 +30,11 @@ Return:
 
 ### Analyze
 
+* 找比当前值小的方向
+* 终止条件:
+  * 存在到 Pacific 的路径
+  * 存在到 Atlantic 的路径
+
 ```js
 /**
  * @param {number[][]} matrix
@@ -48,6 +53,10 @@ var pacificAtlantic = function(matrix) {
 var directions = [[1, 0], [0, 1], [-1, 0], [0, -1]] // bottom、right、top、left
 
 var iterator = function(matrix, m, n, used, result) {
+  // achieve the board of matrix
+  if () {
+    return true
+  }
   for (let i = 0; i < directions.length; i++) {
     // todo
   }
