--- a/LeetCode/417.Pacific_Atlantic_Water_Flow.md
+++ b/LeetCode/417.Pacific_Atlantic_Water_Flow.md
@@ -54,12 +54,23 @@ var directions = [[1, 0], [0, 1], [-1, 0], [0, -1]] // bottom、right、top、le
 
 var iterator = function(matrix, m, n, used, result) {
   // achieve the board of matrix
-  if () {
+  if (ifReachPacific(m, n) || ifReachAtlantic(m, n)) {
     return true
   }
   for (let i = 0; i < directions.length; i++) {
-    // todo
+    if (!isValid(matrix, m + directions[i][0], n + directions[i][1])) continue
+    const newPoint = directions[m + directions[i][0]][n + directions[i][1]]
+    if (newPoint > matrix[m][n]) {
+      continue
+    }
+    const tag = iterator(matrix, m + directions[i][0], n + directions[i][1])
+
   }
+}
+
+var isValid = (matrix, m, n) => {
+  if (matrix[m] && matrix[m][n]) return true
+  return false
 }
 
 var ifReachPacific = function(m, n) {
