--- a/BasicSkill/basis/移动端场景知识.md
+++ b/BasicSkill/basis/移动端场景知识.md
@@ -114,6 +114,11 @@ box-shadow: 0px -1px 0px 0px rgba(245, 245, 245, 1);
 * `window.scrollTo` 在 IOS12.1 以下的机子下是不兼容的;
 * `insertAdjacentHTML` 虽然在 [caniuse](https://caniuse.com/#search=insertAdjacentHTML) 中看起来兼容性很好, 但是在 IOS10.2 以下的机子中部分节点是没有这个 api 的, 所以从中也能看出 caniuse 可以作为部分参考, 但不能全信;
 
+### 其它兼容
+
+* `new Date('xxxx-xx-xx xx:xx')` 在 IOS 系统中会报 Invalid Date, 在安卓中正常。
+  * 兼容方法: `new Date('xxxx/xx/xx xx:xx')`, 经验证该方法在 IOS 与 Android 都可运行。
+
 ### user-select
 
 ```css
