--- a/LeetCode/417.Pacific_Atlantic_Water_Flow.md
+++ b/LeetCode/417.Pacific_Atlantic_Water_Flow.md
@@ -15,6 +15,8 @@ Example:
 ```js
 Given the following 5 x 5 matrix:
 
+var test = [[1, 2, 2, 3, 5], [3, 2, 3, 4, 4], [2, 4, 5, 3, 1], [6, 7, 1, 4, 5], [5, 1, 1, 2, 4]]
+
   Pacific ~   ~   ~   ~   ~
        ~  1   2   2   3  (5) *
        ~  3   2   3  (4) (4) *
@@ -32,8 +34,8 @@ Return:
 
 * 找比当前值小的方向
 * 终止条件:
-  * 存在到 Pacific 的路径
-  * 存在到 Atlantic 的路径
+  * 找到存在到 Pacific 的路径
+  * 找到存在到 Atlantic 的路径
 
 ```js
 /**
@@ -42,35 +44,44 @@ Return:
  */
 var pacificAtlantic = function(matrix) {
   const result = []
-  const used = []
   for (let m = 0; m < matrix.length; m++) {
     for (let n = 0; n < matrix[m].length; n++) {
-      iterator(matrix, m, n, used, result)
+      const usedPacific = []
+      const usedAtlantic = []
+      if (iterator(matrix, m, n, usedPacific, 'pacific')
+        && iterator(matrix, m, n, usedAtlantic, 'atlantic')) {
+        result.push([m, n])
+      }
     }
   }
+  return result
 };
 
 var directions = [[1, 0], [0, 1], [-1, 0], [0, -1]] // bottom、right、top、left
 
-var iterator = function(matrix, m, n, used, result) {
+var iterator = function(matrix, m, n, used, tag) {
+  used.push(`${m},${n}`)
+
   // achieve the board of matrix
-  if (ifReachPacific(m, n) || ifReachAtlantic(m, n)) {
+  if (tag === 'pacific' ? ifReachPacific(m, n) : ifReachAtlantic(matrix, m, n)) {
     return true
   }
+
   for (let i = 0; i < directions.length; i++) {
-    if (!isValid(matrix, m + directions[i][0], n + directions[i][1])) continue
-    const newPoint = directions[m + directions[i][0]][n + directions[i][1]]
+    if (!isValid(matrix, m + directions[i][0], n + directions[i][1], used)) continue
+    const newPoint = matrix[m + directions[i][0]][n + directions[i][1]]
     if (newPoint > matrix[m][n]) {
       continue
     }
-    const tag = iterator(matrix, m + directions[i][0], n + directions[i][1])
-
+    return iterator(matrix, m + directions[i][0], n + directions[i][1], used, tag)
   }
+  return false
 }
 
-var isValid = (matrix, m, n) => {
-  if (matrix[m] && matrix[m][n]) return true
-  return false
+// judge if is valid
+var isValid = (matrix, m, n, used) => {
+  if (used.indexOf(`${m},${n}`) > -1 || !(matrix[m] && matrix[m][n])) return false
+  return true
 }
 
 var ifReachPacific = function(m, n) {
