lc: ac 417 then 51

--- a/LeetCode/417.Pacific_Atlantic_Water_Flow.md
+++ b/LeetCode/417.Pacific_Atlantic_Water_Flow.md
@@ -10,7 +10,7 @@ Note:
 * The order of returned grid coordinates does not matter.
 * Both m and n are less than 150.
 
-Example:
+Example 1:
 
 ```js
 Given the following 5 x 5 matrix:
@@ -30,12 +30,24 @@ Return:
 [[0, 4], [1, 3], [1, 4], [2, 2], [3, 0], [3, 1], [4, 0]] (positions with parentheses in above matrix).
 ```
 
+Example 2:
+
+```js
+var test = [[3, 3, 3], [3, 1, 3], [0, 2, 4]]
+
+  Pacific ~   ~   ~
+       ~  3   3   3  *
+       ~  3   1   3  *
+       ~  0   2   4  *
+          *   *   *  Atlantic
+```
+
 ### Analyze
 
-* 找比当前值小的方向
-* 终止条件:
-  * 找到存在到 Pacific 的路径
-  * 找到存在到 Atlantic 的路径
+* 有效出发点:
+  * 存在到 Pacific 的路径;
+  * 存在到 Atlantic 的路径;
+* 使用「染色算法」在比当前值小的方向递归找寻
 
 ```js
 /**
@@ -73,14 +85,17 @@ var iterator = function(matrix, m, n, used, tag) {
     if (newPoint > matrix[m][n]) {
       continue
     }
-    return iterator(matrix, m + directions[i][0], n + directions[i][1], used, tag)
+    const nextIsValid = iterator(matrix, m + directions[i][0], n + directions[i][1], used, tag)
+    if (nextIsValid) {
+      return true
+    }
   }
   return false
 }
 
 // judge if is valid
 var isValid = (matrix, m, n, used) => {
-  if (used.indexOf(`${m},${n}`) > -1 || !(matrix[m] && matrix[m][n])) return false
+  if (used.indexOf(`${m},${n}`) > -1 || !(matrix[m] && typeof matrix[m][n] === 'number')) return false
   return true
 }
 
@@ -89,6 +104,10 @@ var ifReachPacific = function(m, n) {
 }
 
 var ifReachAtlantic = function(matrix, m, n) {
-  return m === matrix.length || n === matrix[0].length
+  return m === matrix.length - 1 || n === matrix[0].length - 1
 }
 ```
+
+### Similar Title
+
+130
