--- a/BasicSkill/css/css小书/字体排印.md
+++ b/BasicSkill/css/css小书/字体排印.md
@@ -29,12 +29,12 @@
 
 ```js
 1vw = document.documentElement.clientWidth(px) / 100
-(100/document.documentElement.clientWidth)vw = 1px
+(100 / document.documentElement.clientWidth)vw = 1px
 ```
 
 #### rem 的使用
 
-通常将 1rem 设置为 100px, (经过测试 10px/1px 也是可以的)
+通常将 `1rem` 设置为 `100px`, (经过测试 10px/1px 也是可以的)
 
 <details>
   <summary>相关测试</summary>
