--- a/LeetCode/103.Binary_Tree_Zigzag_Level_Order_Traversal.md
+++ b/LeetCode/103.Binary_Tree_Zigzag_Level_Order_Traversal.md
@@ -1,4 +1,4 @@
-### 103.Binary_Tree_Zigzag_Level_Order_Traversal
+### 103.Binary Tree Zigzag Level Order Traversal
 
 Given a binary tree, return the zigzag level order traversal of its nodes' values. (ie, from left to right, then right to left for the next level and alternate between).
 
