--- a/LeetCode/51.N-Queens.md
+++ b/LeetCode/51.N-Queens.md
@@ -2,7 +2,7 @@
 
 The n-queens puzzle is the problem of placing `n` queens on an `n x n` chessboard such that no two queens attack each other.
 
-Given an integer n, return all distinct solutions to the n-queens puzzle.
+Given `an integer n`, return all distinct solutions to the n-queens puzzle.
 
 Each solution contains a distinct board configuration of the n-queens' placement, where 'Q' and '.' both indicate a queen and an empty space, respectively.
 
@@ -11,6 +11,7 @@ Example 1:
 ```js
 Input: n = 4
 Output: [[".Q..","...Q","Q...","..Q."],["..Q.","Q...","...Q",".Q.."]]
+
 . Q . .            . . Q .
 . . . Q     or     Q . . .
 Q . . .            . . . Q
@@ -37,6 +38,17 @@ Output: [["Q"]]
  * @return {string[][]}
  */
 var solveNQueens = function(n) {
-
+  const output = []
+  for (let x = 0; x < n; x++) {
+    for (let y = 0; y < n; y++) {
+      const used = []
+      handleNQueens(used, output)
+    }
+  }
+  return output
 };
+
+var handleNQueens = (used, output) => {
+
+}
 ```
