docs: update docs

--- a/LeetCode/51.N-Queens.md
+++ b/LeetCode/51.N-Queens.md
@@ -18,8 +18,8 @@ Q . . .            . . . Q
 . . Q .            . Q . .
 ```
 
-Explanation: There exist two distinct solutions to the 4-queens puzzle as shown above
-
+Explanation: There exist two distinct solutions to the 4-queens puzzle as shown above.
+你好111
 Example 2:
 
 ```js
@@ -34,6 +34,14 @@ Output: [["Q"]]
 
 ```js
 /**
+ * limit: {
+ *      x: [],
+ *      y: [],
+ *   slash1(\): [],
+ *   slash2(/): []
+ * }
+ */
+/**
  * @param {number} n
  * @return {string[][]}
  */
@@ -42,13 +50,18 @@ var solveNQueens = function(n) {
   for (let x = 0; x < n; x++) {
     for (let y = 0; y < n; y++) {
       const used = []
-      handleNQueens(used, output)
+      const limit = {}
+      handleNQueens(x, y, used, limit, [], output)
     }
   }
   return output
 };
 
-var handleNQueens = (used, output) => {
+var map = [[1, 0], [0, 1], [-1, 0], [0, -1]] // bottom、right、top、left
+
+var handleNQueens = (x, y, used, limit, result, output) => {
+  used.push(`${x},${y}`)
+  if (invalid(x, y))
 
 }
 ```
