--- a/LeetCode/51.N-Queens.md
+++ b/LeetCode/51.N-Queens.md
@@ -19,7 +19,7 @@ Q . . .            . . . Q
 ```
 
 Explanation: There exist two distinct solutions to the 4-queens puzzle as shown above.
-你好111
+
 Example 2:
 
 ```js
@@ -31,6 +31,35 @@ Output: [["Q"]]
   * 1 <= n <= 9
 
 ### Analyze
+
+* 左上 -> 右下斜线
+
+```js
+    0   1   2   3
+0   .   Q   .   .
+
+1   .   .   .   Q
+
+2   Q   .   .   .
+
+3   .   .   Q   .
+```
+
+罗列从左上到右下斜线点发现规律: Todo
+
+* `(0, 0)`
+* `(0, 1)、(1, 0)`
+* `(0, 2)、(1, 1)、(2, 0)`
+* `(0, 3)、(1, 2)、(2, 1)、(3, 0)`
+
+* 右上 -> 左下斜线
+
+```js
+. Q . .
+. . . Q
+Q . . .
+. . Q .
+```
 
 ```js
 /**
@@ -57,11 +86,20 @@ var solveNQueens = function(n) {
   return output
 };
 
-var map = [[1, 0], [0, 1], [-1, 0], [0, -1]] // bottom、right、top、left
+var direction = [[1, 0], [0, 1], [-1, 0], [0, -1]] // bottom、right、top、left
 
 var handleNQueens = (x, y, used, limit, result, output) => {
   used.push(`${x},${y}`)
-  if (invalid(x, y))
-
+  // if (invalid(x, y))
+  for (let i = 0; i < direction.length; i++) {
+    if (
+      used.indexOf(`${x},${y}`) > -1
+      || limit.x.indexOf(x) > -1
+      || limit.y.indexOf(y) > -1
+    ) {
+      continue
+    }
+    handleNQueens(x + direction[i][0], y + direction[i][1], used, limit, result, output)
+  }
 }
 ```
