--- a/LeetCode/51.N-Queens.md
+++ b/LeetCode/51.N-Queens.md
@@ -32,8 +32,6 @@ Output: [["Q"]]
 
 ### Analyze
 
-* 左上 -> 右下斜线
-
 ```js
     0   1   2   3
 0   .   Q   .   .
@@ -45,61 +43,79 @@ Output: [["Q"]]
 3   .   .   Q   .
 ```
 
-罗列从左上到右下斜线点发现规律: Todo
+罗列从`右上到左下`斜线点发现规律: `横坐标与纵坐标之和为定值`。
 
 * `(0, 0)`
 * `(0, 1)、(1, 0)`
 * `(0, 2)、(1, 1)、(2, 0)`
 * `(0, 3)、(1, 2)、(2, 1)、(3, 0)`
+* `(1, 3)、(2, 2)、(3, 1)`
+* `(2, 3)、(3, 2)`
+* `(3, 3)`
 
-* 右上 -> 左下斜线
+罗列从`左上到右下`斜线点发现规律: `横坐标与纵坐标之差为定值`。
+
+* `(3, 0)`
+* `(2, 0)、(3, 1)`
+* `(1, 0)、(2, 1)、(3, 2)`
+* `(0, 0)、(1, 1)、(2, 2)、(3, 3)`
+* `(0, 1)、(1, 2)、(2, 3)`
+* `(0, 2)、(1, 3)`
+* `(0, 3)`
 
 ```js
-. Q . .
-. . . Q
-Q . . .
-. . Q .
-```
-
-```js
-/**
- * limit: {
- *      x: [],
- *      y: [],
- *   slash1(\): [],
- *   slash2(/): []
- * }
- */
 /**
  * @param {number} n
  * @return {string[][]}
  */
 var solveNQueens = function(n) {
-  const output = []
+  const result = []
   for (let x = 0; x < n; x++) {
     for (let y = 0; y < n; y++) {
       const used = []
-      const limit = {}
-      handleNQueens(x, y, used, limit, [], output)
+      const limit = {
+        x: [],
+        y: [],
+        sum: [],
+        diff: []
+      }
+      handleNQueens(x, y, used, limit, [], result, n)
     }
   }
-  return output
+  return result
 };
 
-var direction = [[1, 0], [0, 1], [-1, 0], [0, -1]] // bottom、right、top、left
+var handleNQueens = (x, y, used, limit, output, result, n) => {
+  const sum = x + y
+  const diff = x - y
+  if (
+    used.indexOf(`${x},${y}`) > -1
+    || limit.x.indexOf(x) > -1
+    || limit.y.indexOf(y) > -1
+    || limit.sum.indexOf(sum) > -1
+    || limit.diff.indexOf(sum) > -1
+  ) {
+    return
+  }
+  if (limit.x.length === n) {
+    result.push(output)
+    return
+  }
+  for (m1 = x; m1 < n; m1++) {
+    for (m2 = y; m2 < n; m2++) {
+      used.push(`${x},${y}`)
+      output.push(`${x},${y}`)
+      console.log('output', output)
 
-var handleNQueens = (x, y, used, limit, result, output) => {
-  used.push(`${x},${y}`)
-  // if (invalid(x, y))
-  for (let i = 0; i < direction.length; i++) {
-    if (
-      used.indexOf(`${x},${y}`) > -1
-      || limit.x.indexOf(x) > -1
-      || limit.y.indexOf(y) > -1
-    ) {
-      continue
+      limit.x.push(x)
+      limit.y.push(y)
+      limit.sum.push(sum)
+      limit.diff.push(diff)
+
+      handleNQueens(m1 + 1, m2 + 1, used, limit, result, output)
+      output.pop()
+      console.log('output', output)
     }
-    handleNQueens(x + direction[i][0], y + direction[i][1], used, limit, result, output)
   }
 }
 ```
