--- a/LeetCode/51.N-Queens.md
+++ b/LeetCode/51.N-Queens.md
@@ -63,6 +63,23 @@ Output: [["Q"]]
 * `(0, 2)、(1, 3)`
 * `(0, 3)`
 
+推演顺序
+
+```js
+    0   1   2   3
+0   Q   .   .   .
+
+1   .   .   Q   .
+
+2   .   .   .   .
+
+3   .   .   .   .
+```
+
+* 0, 0
+  * 1, 2
+  * game over
+
 ```js
 /**
  * @param {number} n
@@ -70,52 +87,57 @@ Output: [["Q"]]
  */
 var solveNQueens = function(n) {
   const result = []
-  for (let x = 0; x < n; x++) {
-    for (let y = 0; y < n; y++) {
-      const used = []
-      const limit = {
-        x: [],
-        y: [],
-        sum: [],
-        diff: []
-      }
-      handleNQueens(x, y, used, limit, [], result, n)
-    }
+  const limit = {
+    used: [],
+    x: [],
+    y: [],
+    sum: [],
+    diff: []
   }
+  handleNQueens(n, 0, limit, result)
   return result
 };
 
-var handleNQueens = (x, y, used, limit, output, result, n) => {
-  const sum = x + y
-  const diff = x - y
-  if (
-    used.indexOf(`${x},${y}`) > -1
-    || limit.x.indexOf(x) > -1
-    || limit.y.indexOf(y) > -1
-    || limit.sum.indexOf(sum) > -1
-    || limit.diff.indexOf(sum) > -1
-  ) {
-    return
+// handle the position with the index row from n Queue.
+var handleNQueens = (n, index, limit, result) => {
+  if (index === n) {
+    // todo
   }
+
   if (limit.x.length === n) {
-    result.push(output)
+    result.push([...limit.used])
+    console.log('result', result)
     return
   }
-  for (m1 = x; m1 < n; m1++) {
-    for (m2 = y; m2 < n; m2++) {
-      used.push(`${x},${y}`)
-      output.push(`${x},${y}`)
-      console.log('output', output)
 
-      limit.x.push(x)
-      limit.y.push(y)
-      limit.sum.push(sum)
-      limit.diff.push(diff)
-
-      handleNQueens(m1 + 1, m2 + 1, used, limit, result, output)
-      output.pop()
-      console.log('output', output)
+  debugger
+  // 第 index 行安置在第几列中
+  for (let y = 0; y < n; y++) {
+    const sum = index + y
+    const diff = index - y
+    if (
+      limit.used.indexOf(`${index},${y}`) > -1
+      || limit.x.indexOf(index) > -1
+      || limit.y.indexOf(y) > -1
+      || limit.sum.indexOf(sum) > -1
+      || limit.diff.indexOf(sum) > -1
+    ) {
+      continue
     }
+    limit.used.push(`${index},${y}`)
+    console.log('used', limit.used)
+    limit.x.push(index)
+    limit.y.push(y)
+    limit.sum.push(sum)
+    limit.diff.push(diff)
+
+    handleNQueens(n, index + 1, limit, result)
+    limit.used.pop()
+    console.log('used', limit.used)
+    limit.x.pop()
+    limit.y.pop()
+    limit.sum.pop()
+    limit.diff.pop()
   }
 }
 ```
