--- a/LeetCode/51.N-Queens.md
+++ b/LeetCode/51.N-Queens.md
@@ -43,7 +43,9 @@ Output: [["Q"]]
 3   .   .   Q   .
 ```
 
-罗列从`右上到左下`斜线点发现规律: `横坐标与纵坐标之和为定值`。
+关于斜对角线上的限制可以得出以下两条规律。
+
+1. 罗列从`右上到左下`斜线点发现规律: `横坐标与纵坐标之和为定值`。
 
 * `(0, 0)`
 * `(0, 1)、(1, 0)`
@@ -53,7 +55,7 @@ Output: [["Q"]]
 * `(2, 3)、(3, 2)`
 * `(3, 3)`
 
-罗列从`左上到右下`斜线点发现规律: `横坐标与纵坐标之差为定值`。
+2. 罗列从`左上到右下`斜线点发现规律: `横坐标与纵坐标之差为定值`。
 
 * `(3, 0)`
 * `(2, 0)、(3, 1)`
@@ -62,23 +64,6 @@ Output: [["Q"]]
 * `(0, 1)、(1, 2)、(2, 3)`
 * `(0, 2)、(1, 3)`
 * `(0, 3)`
-
-推演顺序
-
-```js
-    0   1   2   3
-0   Q   .   .   .
-
-1   .   .   Q   .
-
-2   .   .   .   .
-
-3   .   .   .   .
-```
-
-* 0, 0
-  * 1, 2
-  * game over
 
 ```js
 /**
@@ -98,19 +83,31 @@ var solveNQueens = function(n) {
   return result
 };
 
+// eg: when n is 4, arr is [["0,1", "1,3", "2,0", "3,2"], ["0,2", "1,0", "2,3", "3,1"]]
+var generate = (arr) => {
+  const xArr = []
+  for (let x = 0; x < arr.length; x++) {
+    const [queueX, queueY] = arr[x].split(',')
+    let yStr = ''
+    for (let y = 0; y < arr.length; y++) {
+      if (x === Number(queueX) && y === Number(queueY)) {
+        yStr = yStr + 'Q'
+      } else {
+        yStr = yStr + '.'
+      }
+    }
+    xArr.push(yStr)
+  }
+  return xArr
+}
+
 // handle the position with the index row from n Queue.
 var handleNQueens = (n, index, limit, result) => {
-  if (index === n) {
-    // todo
-  }
-
   if (limit.x.length === n) {
-    result.push([...limit.used])
-    console.log('result', result)
+    result.push(generate([...limit.used]))
     return
   }
 
-  debugger
   // 第 index 行安置在第几列中
   for (let y = 0; y < n; y++) {
     const sum = index + y
@@ -120,12 +117,11 @@ var handleNQueens = (n, index, limit, result) => {
       || limit.x.indexOf(index) > -1
       || limit.y.indexOf(y) > -1
       || limit.sum.indexOf(sum) > -1
-      || limit.diff.indexOf(sum) > -1
+      || limit.diff.indexOf(diff) > -1
     ) {
       continue
     }
     limit.used.push(`${index},${y}`)
-    console.log('used', limit.used)
     limit.x.push(index)
     limit.y.push(y)
     limit.sum.push(sum)
@@ -133,7 +129,6 @@ var handleNQueens = (n, index, limit, result) => {
 
     handleNQueens(n, index + 1, limit, result)
     limit.used.pop()
-    console.log('used', limit.used)
     limit.x.pop()
     limit.y.pop()
     limit.sum.pop()
