docs: read 黑客与画家

--- a/BasicSkill/life/books/黑客与画家.md
+++ b/BasicSkill/life/books/黑客与画家.md
@@ -8,4 +8,7 @@
   * 10+ 岁心智的不健全。
   * 中学阶段,「书呆子」不受欢迎。但是小学阶段「书呆子」没啥影响, 进入社会后, 「书呆子」更受欢迎。
 * 黑客与画家
-  * read 46
+  * 论述了黑客与画家的一些共同点。
+    * 创造性
+* 不能说的话
+  * page 34
