docs: read 黑客与画家

--- a/LeetCode/36.Valid_Sudoku.md
+++ b/LeetCode/36.Valid_Sudoku.md
@@ -1,16 +1,16 @@
-### title
+### 36.Valid_Sudoku
 
-判断一个 9x9 的数独是否有效。只需要根据以下规则, 验证已经填入的数字是否有效即可。
+判断一个 9 x 9 的数独是否有效。只需要根据以下规则, `验证已经填入的数字是否有效即可`。
 
-1.数字 1-9 在每一行只能出现一次。
-2.数字 1-9 在每一列只能出现一次。
-3.数字 1-9 在每一个以粗实线分隔的 3x3 宫内只能出现一次。
+1.数字 1 - 9 在每一行只能出现一次。
+2.数字 1 - 9 在每一列只能出现一次。
+3.数字 1 - 9 在每一个以粗实线分隔的 3 x 3 宫内只能出现一次。
 
 [题目链接](https://leetcode-cn.com/problems/valid-sudoku/description/)
 
 示例 1:
 
-```
+```js
 输入:
 [
   ["5","3",".",".","7",".",".",".","."],
@@ -28,7 +28,7 @@
 
 示例 2:
 
-```
+```js
 输入:
 [
   ["8","3",".",".","7",".",".",".","."],
@@ -42,16 +42,17 @@
   [".",".",".",".","8",".",".","7","9"]
 ]
 输出: false
-解释: 除了第一行的第一个数字从 5 改为 8 以外, 空格内其他数字均与 示例1 相同。
-     但由于位于左上角的 3x3 宫内有两个 8 存在, 因此这个数独是无效的。
 ```
+
+解释: 除了第一行的第一个数字从 5 改为 8 以外, 空格内其他数字均与示例 1 相同。
+     但由于位于左上角的 3 x 3 宫内有两个 8 存在, 因此这个数独是无效的。
 
 说明:
 
 * 一个有效的数独（部分已被填充）不一定是可解的
 * 只需要根据以上规则, 验证已经填入的数字是否有效即可
-* 给定数独序列只包含数字 1-9 和字符 '.'
-* 给定数独永远是 9x9 形式的
+* 给定数独序列只包含数字 1 - 9 和字符 '.'
+* 给定数独永远是 9 x 9 形式的
 
 ### analyze
 
