docs: update kibana

--- a/BasicSkill/readES6/模块.md
+++ b/BasicSkill/readES6/模块.md
@@ -96,3 +96,5 @@ console.log(a)
 import cjsModule from '../index.js';
 export const foo = cjsModule.foo;
 ```
+
+Todo: 调研为什么 CJS 封装为 ESM 容易, 但是反过来不行。
