--- a/BasicSkill/readES6/模块.md
+++ b/BasicSkill/readES6/模块.md
@@ -88,9 +88,9 @@ console.log(a)
 
 1. 提供一个 CJS 版本
 
-这样可以确保你的库在旧版本 Node 下跑的更好。（如果你写的是 TypeScript 或者其他需要编译到 JavaScript 的语言，那么编译到 CJS。）
+这样可以确保你的库在旧版本 Node 下跑的更好。(如果你写的是 TypeScript 或者其他需要编译到 JavaScript 的语言，那么编译到 CJS。)
 
-2. 基于 CJS 封装到 ESM 版本 (将 CJS 封装到 ESM 很容易，但是 ESM 库是没法封装到 CJS 库的。)
+2. 基于 CJS 封装到 ESM 版本 (将 CJS 封装到 ESM 很容易，但是 ESM 库是没法封装到 CJS 库的)。
 
 ```js
 import cjsModule from '../index.js';
