--- a/BasicSkill/readES6/遍历语法.md
+++ b/BasicSkill/readES6/遍历语法.md
@@ -58,7 +58,7 @@ for (let prop in arr) {
 
 ### for...of
 
-for……of 是 ES6 新增的遍历方式, 它提供了统一的遍历机制。所有实现了 [Symbol.iterator] 接口的对象都可以被遍历。for...of 循环可以使用的范围包括数组、Set 和 Map 结构、某些类似数组的对象 (比如 arguments 对象、DOM NodeList 对象)、Generator 对象, 以及字符串
+`for……of` 是 ES6 新增的遍历方式, 它提供了统一的遍历机制。所有实现了 [Symbol.iterator] 接口的对象都可以被遍历。for...of 循环可以使用的范围包括数组、Set 和 Map 结构、某些类似数组的对象 (比如 arguments 对象、DOM NodeList 对象)、Generator 对象, 以及字符串。
 
 优点：
 
