--- a/LeetCode/37.Sudoku_Solver.md
+++ b/LeetCode/37.Sudoku_Solver.md
@@ -6,7 +6,7 @@ A sudoku solution must satisfy all of the following rules:
 
 1. Each of the digits 1-9 must occur exactly once in each row.
 2. Each of the digits 1-9 must occur exactly once in each column.
-3. Each of the digits 1-9 must occur exactly once in each of the 9 3x3 sub-boxes of the grid.
+3. Each of the digits 1-9 must occur exactly once in each of the 9 `3 x 3` sub-boxes of the grid.
 
 > The '.' character indicates empty cells.
 
@@ -41,7 +41,7 @@ Output:
 ]
 ```
 
-Explanation: The input board is shown above and the only valid solution is shown below:
+> Explanation: The input board is shown above and the only valid solution is shown below:
 
 ![](https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Sudoku-by-L2G-20050714_solution.svg/250px-Sudoku-by-L2G-20050714_solution.svg.png)
 
@@ -56,11 +56,53 @@ It is guaranteed that the input board has only one solution.
 ### Analyze
 
 ```js
+[
+  ["5","3","1",".","7",".",".",".","."],
+  ["6",".",".","1","9","5",".",".","."],
+  [".","9","8",".",".",".",".","6","."],
+  ["8",".",".",".","6",".",".",".","3"],
+  ["4",".",".","8",".","3",".",".","1"],
+  ["7",".",".",".","2",".",".",".","6"],
+  [".","6",".",".",".",".","2","8","."],
+  [".",".",".","4","1","9",".",".","5"],
+  [".",".",".",".","8",".",".","7","9"]
+]
+```
+
+```js
 /**
  * @param {character[][]} board
  * @return {void} Do not return anything, modify board in-place instead.
  */
 var solveSudoku = function(board) {
+  const obj = {}
+  const used = {}
+  for (let x = 0; x < 9; x++) {
+    for (let y = 0; y < 9; y++) {
+      if (board[x][y] !== '.') {
+        // init used sudu.
+        used[`${x}、${y}`] = true
 
+        if (!obj[`rows ${x}`]) obj[`rows ${x}`] = []
+        if (!obj[`columns ${y}`]) obj[`columns ${y}`] = []
+        const blockX = Math.floor(x / 3)
+        const blockY = Math.floor(y / 3)
+        if (!obj[`block ${blockX}${blockY}`]) obj[`block ${blockX}${blockY}`] = []
+        obj[`rows ${x}`].push(board[x][y])
+        obj[`columns ${y}`].push(board[x][y])
+        obj[`block ${blockX}${blockY}`].push(board[x][y])
+      }
+    }
+  }
+
+  for (let x = 0; x < 9; x++) {
+    for (let y = 0; y < 9; y++) {
+      dfs(board, x, y, obj, used)
+    }
+  }
 };
+
+var dfs = function(board, x, y, obj, used) {
+
+}
 ```
