--- a/LeetCode/37.Sudoku_Solver.md
+++ b/LeetCode/37.Sudoku_Solver.md
@@ -102,7 +102,26 @@ var solveSudoku = function(board) {
   }
 };
 
-var dfs = function(board, x, y, obj, used) {
+var directions = [[1, 0], [0, 1], [-1, 0], [0, -1]]
 
+var dfs = function(board, x, y, obj, used) {
+  if (used[`${x}、${y}`]) {
+    return
+  } else {
+    // data source
+    for (let i = 1; i <= 9; i++) {
+      const blockX = Math.floor(x / 3)
+      const blockY = Math.floor(y / 3)
+      if (
+        obj[`rows ${x}`].indexOf(i) > -1
+        || obj[`columns ${y}`].indexOf(i) > -1
+        || obj[`block ${blockX}${blockY}`].indexOf(i) > -1
+      ) {
+        continue
+      } else {
+
+      }
+    }
+  }
 }
 ```
