docs: translate seo_in_spa_site

--- a/LeetCode/37.Sudoku_Solver.md
+++ b/LeetCode/37.Sudoku_Solver.md
@@ -119,7 +119,13 @@ var dfs = function(board, x, y, obj, used) {
       ) {
         continue
       } else {
-
+        used[`${x}、${y}`] = true
+        obj[`rows ${x}`].push(i)
+        obj[`columns ${y}`].push(i)
+        obj[`block ${blockX}${blockY}`].push(i)
+        for (let m = 0; m < directions.length; m++) {
+          dfs(board, directions[m][0], directions[m][1], obj, used)
+        }
       }
     }
   }
