--- a/LeetCode/37.Sudoku_Solver.md
+++ b/LeetCode/37.Sudoku_Solver.md
@@ -76,12 +76,14 @@ It is guaranteed that the input board has only one solution.
  */
 var solveSudoku = function(board) {
   const obj = {}
-  const used = {}
+  const used = []
   for (let x = 0; x < 9; x++) {
     for (let y = 0; y < 9; y++) {
       if (board[x][y] !== '.') {
-        // init used sudu.
-        used[`${x}、${y}`] = true
+        used.push({
+          x: false,
+          y: false
+        })
 
         if (!obj[`rows ${x}`]) obj[`rows ${x}`] = []
         if (!obj[`columns ${y}`]) obj[`columns ${y}`] = []
@@ -91,42 +93,39 @@ var solveSudoku = function(board) {
         obj[`rows ${x}`].push(board[x][y])
         obj[`columns ${y}`].push(board[x][y])
         obj[`block ${blockX}${blockY}`].push(board[x][y])
+      } else {
+        used.push({
+          x,
+          y
+        })
       }
     }
   }
 
-  for (let x = 0; x < 9; x++) {
-    for (let y = 0; y < 9; y++) {
-      dfs(board, x, y, obj, used)
-    }
-  }
+  dfs(board, 0, obj, used)
 };
 
-var directions = [[1, 0], [0, 1], [-1, 0], [0, -1]]
+var dfs = function(board, pos, obj, used) {
+  const [x, y] = used[pos]
+  if (pos === used.length - 1) {
 
-var dfs = function(board, x, y, obj, used) {
-  if (used[`${x}、${y}`]) {
-    return
-  } else {
-    // data source
-    for (let i = 1; i <= 9; i++) {
-      const blockX = Math.floor(x / 3)
-      const blockY = Math.floor(y / 3)
-      if (
-        obj[`rows ${x}`].indexOf(i) > -1
-        || obj[`columns ${y}`].indexOf(i) > -1
-        || obj[`block ${blockX}${blockY}`].indexOf(i) > -1
-      ) {
-        continue
-      } else {
-        used[`${x}、${y}`] = true
-        obj[`rows ${x}`].push(i)
-        obj[`columns ${y}`].push(i)
-        obj[`block ${blockX}${blockY}`].push(i)
-        for (let m = 0; m < directions.length; m++) {
-          dfs(board, directions[m][0], directions[m][1], obj, used)
-        }
-      }
+  }
+  // data source
+  for (let i = 1; i <= 9; i++) {
+    const blockX = Math.floor(x / 3)
+    const blockY = Math.floor(y / 3)
+    if (
+      obj[`rows ${x}`].indexOf(i) === -1
+      && obj[`columns ${y}`].indexOf(i) === -1
+      && obj[`block ${blockX}${blockY}`].indexOf(i) === -1
+    ) {
+      obj[`rows ${x}`].push(i)
+      obj[`columns ${y}`].push(i)
+      obj[`block ${blockX}${blockY}`].push(i)
+      dfs(board, pos + 1, obj, used)
+      obj[`rows ${x}`].pop()
+      obj[`columns ${y}`].pop()
+      obj[`block ${blockX}${blockY}`].pop()
     }
   }
 }
