--- a/LeetCode/37.Sudoku_Solver.md
+++ b/LeetCode/37.Sudoku_Solver.md
@@ -56,17 +56,15 @@ It is guaranteed that the input board has only one solution.
 ### Analyze
 
 ```js
-[
-  ["5","3","1",".","7",".",".",".","."],
-  ["6",".",".","1","9","5",".",".","."],
-  [".","9","8",".",".",".",".","6","."],
-  ["8",".",".",".","6",".",".",".","3"],
-  ["4",".",".","8",".","3",".",".","1"],
-  ["7",".",".",".","2",".",".",".","6"],
-  [".","6",".",".",".",".","2","8","."],
-  [".",".",".","4","1","9",".",".","5"],
-  [".",".",".",".","8",".",".","7","9"]
-]
+0: (9) ["5", "3", "7", "4", "6", "8", "9", "1", "2"]
+1: (9) ["6", "1", "9", "5", "7", "2", "3", "4", "8"]
+2: (9) ["9", "8", "6", "1", "3", "4", "2", "5", "7"]
+3: (9) ["8", "6", "3", "5", "9", "7", "1", "4", "2"]
+4: (9) ["4", "8", "3", "1", "2", "6", "5", "7", "9"]
+5: (9) ["7", "2", "6", "1", "3", "9", "4", "8", "5"]
+6: (9) ["6", "2", "8", "9", "1", "5", "3", "7", "4"]
+7: (9) ["4", "1", "9", "5", "2", "8", "7", "6", "3"]
+8: (9) ["8", "7", "9", "3", "4", "5", "2", "6", "1"]
 ```
 
 ```js
@@ -77,22 +75,18 @@ It is guaranteed that the input board has only one solution.
 var solveSudoku = function(board) {
   const obj = {}
   const used = []
+  const result = []
   for (let x = 0; x < 9; x++) {
     for (let y = 0; y < 9; y++) {
       if (board[x][y] !== '.') {
-        used.push({
-          x: false,
-          y: false
-        })
-
-        if (!obj[`rows ${x}`]) obj[`rows ${x}`] = []
-        if (!obj[`columns ${y}`]) obj[`columns ${y}`] = []
+        if (!obj[`rows ${x}`]) obj[`rows ${x}`] = {}
+        if (!obj[`columns ${y}`]) obj[`columns ${y}`] = {}
         const blockX = Math.floor(x / 3)
         const blockY = Math.floor(y / 3)
-        if (!obj[`block ${blockX}${blockY}`]) obj[`block ${blockX}${blockY}`] = []
-        obj[`rows ${x}`].push(board[x][y])
-        obj[`columns ${y}`].push(board[x][y])
-        obj[`block ${blockX}${blockY}`].push(board[x][y])
+        if (!obj[`block ${blockX}${blockY}`]) obj[`block ${blockX}${blockY}`] = {}
+        obj[`rows ${x}`][`board[${x}][${y}]`] = true
+        obj[`columns ${y}`][`board[${x}][${y}]`] = true
+        obj[`block ${blockX}${blockY}`][`board[${x}][${y}]`] = true
       } else {
         used.push({
           x,
@@ -102,30 +96,35 @@ var solveSudoku = function(board) {
     }
   }
 
-  dfs(board, 0, obj, used)
+  dfs(board, 0, obj, used, result)
+
+  return result
 };
 
-var dfs = function(board, pos, obj, used) {
-  const [x, y] = used[pos]
-  if (pos === used.length - 1) {
-
+var dfs = function(board, pos, obj, used, result) {
+  if (pos === used.length ) {
+    for (let m = 0; m < 9; m++) {
+      result.push([...obj[`rows ${m}`]])
+    }
+    return
   }
+  const { x, y } = used[pos]
   // data source
   for (let i = 1; i <= 9; i++) {
     const blockX = Math.floor(x / 3)
     const blockY = Math.floor(y / 3)
     if (
-      obj[`rows ${x}`].indexOf(i) === -1
-      && obj[`columns ${y}`].indexOf(i) === -1
-      && obj[`block ${blockX}${blockY}`].indexOf(i) === -1
+      !obj[`rows ${x}`][String(i)]
+      && !obj[`columns ${y}`][String(i)]
+      && !obj[`block ${blockX}${blockY}`][String(i)]
     ) {
-      obj[`rows ${x}`].push(i)
-      obj[`columns ${y}`].push(i)
-      obj[`block ${blockX}${blockY}`].push(i)
-      dfs(board, pos + 1, obj, used)
-      obj[`rows ${x}`].pop()
-      obj[`columns ${y}`].pop()
-      obj[`block ${blockX}${blockY}`].pop()
+      obj[`rows ${x}`][String(i)] = true
+      obj[`columns ${y}`][String(i)] = true
+      obj[`block ${blockX}${blockY}`][String(i)] = true
+      dfs(board, pos + 1, obj, used, result)
+      obj[`rows ${x}`][String(i)] = false
+      obj[`columns ${y}`][String(i)] = false
+      obj[`block ${blockX}${blockY}`][String(i)] = false
     }
   }
 }
