--- a/LeetCode/37.Sudoku_Solver.md
+++ b/LeetCode/37.Sudoku_Solver.md
@@ -84,9 +84,9 @@ var solveSudoku = function(board) {
         const blockX = Math.floor(x / 3)
         const blockY = Math.floor(y / 3)
         if (!obj[`block ${blockX}${blockY}`]) obj[`block ${blockX}${blockY}`] = {}
-        obj[`rows ${x}`][`board[${x}][${y}]`] = true
-        obj[`columns ${y}`][`board[${x}][${y}]`] = true
-        obj[`block ${blockX}${blockY}`][`board[${x}][${y}]`] = true
+        obj[`rows ${x}`][board[x][y]] = true
+        obj[`columns ${y}`][board[x][y]] = true
+        obj[`block ${blockX}${blockY}`][board[x][y]] = true
       } else {
         used.push({
           x,
@@ -102,10 +102,11 @@ var solveSudoku = function(board) {
 };
 
 var dfs = function(board, pos, obj, used, result) {
-  if (pos === used.length ) {
-    for (let m = 0; m < 9; m++) {
-      result.push([...obj[`rows ${m}`]])
-    }
+  if (pos === used.length) {
+    debugger
+    // for (let m = 0; m < 9; m++) {
+    //   result.push([...obj[`rows ${m}`]])
+    // }
     return
   }
   const { x, y } = used[pos]
@@ -118,7 +119,7 @@ var dfs = function(board, pos, obj, used, result) {
       && !obj[`columns ${y}`][String(i)]
       && !obj[`block ${blockX}${blockY}`][String(i)]
     ) {
-      obj[`rows ${x}`][String(i)] = true
+      obj[`rows ${x}`][String(i)] = y
       obj[`columns ${y}`][String(i)] = true
       obj[`block ${blockX}${blockY}`][String(i)] = true
       dfs(board, pos + 1, obj, used, result)
