docs: component_design

--- a/LeetCode/37.Sudoku_Solver.md
+++ b/LeetCode/37.Sudoku_Solver.md
@@ -55,17 +55,12 @@ It is guaranteed that the input board has only one solution.
 
 ### Analyze
 
-```js
-0: (9) ["5", "3", "7", "4", "6", "8", "9", "1", "2"]
-1: (9) ["6", "1", "9", "5", "7", "2", "3", "4", "8"]
-2: (9) ["9", "8", "6", "1", "3", "4", "2", "5", "7"]
-3: (9) ["8", "6", "3", "5", "9", "7", "1", "4", "2"]
-4: (9) ["4", "8", "3", "1", "2", "6", "5", "7", "9"]
-5: (9) ["7", "2", "6", "1", "3", "9", "4", "8", "5"]
-6: (9) ["6", "2", "8", "9", "1", "5", "3", "7", "4"]
-7: (9) ["4", "1", "9", "5", "2", "8", "7", "6", "3"]
-8: (9) ["8", "7", "9", "3", "4", "5", "2", "6", "1"]
-```
+该题有一个难点: 需要明确递归的队列是啥。
+
+1. 在这里递归队列是数独中的 `.` 的下标。
+2. 接着根据该队列进行递归操作, 对横向、竖向、3 x 3 内的位置信息作记录。
+  * 若横向、纵向、3 x 3 的位置没有使用过, 则将相应位置标记为已使用(true)
+  * 若横向、纵向、3 x 3 的位置已经使用过, 则进入下一个递归
 
 ```js
 /**
@@ -75,15 +70,14 @@ It is guaranteed that the input board has only one solution.
 var solveSudoku = function(board) {
   const obj = {}
   const used = []
-  const result = []
   for (let x = 0; x < 9; x++) {
     for (let y = 0; y < 9; y++) {
+      if (!obj[`rows ${x}`]) obj[`rows ${x}`] = {}
+      if (!obj[`columns ${y}`]) obj[`columns ${y}`] = {}
+      const blockX = Math.floor(x / 3)
+      const blockY = Math.floor(y / 3)
+      if (!obj[`block ${blockX}${blockY}`]) obj[`block ${blockX}${blockY}`] = {}
       if (board[x][y] !== '.') {
-        if (!obj[`rows ${x}`]) obj[`rows ${x}`] = {}
-        if (!obj[`columns ${y}`]) obj[`columns ${y}`] = {}
-        const blockX = Math.floor(x / 3)
-        const blockY = Math.floor(y / 3)
-        if (!obj[`block ${blockX}${blockY}`]) obj[`block ${blockX}${blockY}`] = {}
         obj[`rows ${x}`][board[x][y]] = true
         obj[`columns ${y}`][board[x][y]] = true
         obj[`block ${blockX}${blockY}`][board[x][y]] = true
@@ -96,17 +90,20 @@ var solveSudoku = function(board) {
     }
   }
 
-  dfs(board, 0, obj, used, result)
+  dfs(board, 0, obj, used)
 
-  return result
+  return board
 };
 
-var dfs = function(board, pos, obj, used, result) {
+var dfs = function(board, pos, obj, used) {
   if (pos === used.length) {
-    debugger
-    // for (let m = 0; m < 9; m++) {
-    //   result.push([...obj[`rows ${m}`]])
-    // }
+    for (let m = 0; m < 9; m++) {
+      for (let n = 1; n <= 9; n++) {
+        if (typeof obj[`rows ${m}`][n] === 'number') {
+          board[m][obj[`rows ${m}`][n]] = String(n)
+        }
+      }
+    }
     return
   }
   const { x, y } = used[pos]
@@ -115,14 +112,14 @@ var dfs = function(board, pos, obj, used, result) {
     const blockX = Math.floor(x / 3)
     const blockY = Math.floor(y / 3)
     if (
-      !obj[`rows ${x}`][String(i)]
+      (obj[`rows ${x}`][String(i)] === undefined || obj[`rows ${x}`][String(i)] === false)
       && !obj[`columns ${y}`][String(i)]
       && !obj[`block ${blockX}${blockY}`][String(i)]
     ) {
       obj[`rows ${x}`][String(i)] = y
       obj[`columns ${y}`][String(i)] = true
       obj[`block ${blockX}${blockY}`][String(i)] = true
-      dfs(board, pos + 1, obj, used, result)
+      dfs(board, pos + 1, obj, used)
       obj[`rows ${x}`][String(i)] = false
       obj[`columns ${y}`][String(i)] = false
       obj[`block ${blockX}${blockY}`][String(i)] = false
