--- a/React/Component_Design/组件开发实践.md
+++ b/React/Component_Design/组件开发实践.md
@@ -183,3 +183,25 @@ Some of these CSS properties have shorthand versions that use the namespace as t
   }
 }
 ```
+
+### 组件属性间尽量减少耦合关系
+
+比如添加了 A 属性 B 属性在某些情况会失效。又或者 C 属性必须在 D 属性存在的时候才生效。
+
+比如以 Upload 组件为例: 背景逻辑是: 最大上传图片数量是 2, 当上传了 2 张图片以后就不显示继续上传了。
+
+```js
+showAdd = () => {
+  const { selectable, maxLength, files } = this.props
+  if (maxLength !== undefined) {
+    if (files.length >= maxLength) {
+      return false
+    }
+    return true
+  }
+  return selectable
+}
+```
+
+业务方举了反例: 例如有些商品图片是标品，图片是平台自己控制的，也许不满足最大数，但是不允许商家去修改的。
+配置了 maxLength={10}, 图片数量只有 3 张时, 不显示增加按钮的需求当前就不能实现。
