docs: fierce conversations

--- a/BasicSkill/life/books/关键沟通.md
+++ b/BasicSkill/life/books/关键沟通.md
@@ -3,3 +3,6 @@
 * 原则一: 拿出勇气, `拷问现实`
   * 官方真相 & 战场真相, 要分析`战场真相`。
   * 成功的另一种定义: 我是什么样的人与我过着什么样的生活相一致的程度。
+* 原则二: `走出自我`, 投入对话, 让对话变得真实。
+  * 生活中的问题很少与别人有关, 基本全部和自己有关。
+* 原则三: `保持专注`, 不分心。
