--- a/LeetCode/120.triangle.md
+++ b/LeetCode/120.triangle.md
@@ -34,13 +34,32 @@ Follow up: Could you do this using only O(n) extra space, where n is the total 
 
 ### Analyze
 
-      0
-    0
-  0   1
-0   1
-  1   2
-    2
+```js
+0 0 0 0
+  1 1 1
+    2 2
       3
+
+0 0 0 0
+0 0 0 1
+0 0 1 1
+0 0 1 2
+0 1 1 1
+0 1 1 2
+0 1 2 2
+0 1 2 3
+
+0 0 0
+  1 1
+    2
+
+0 0 0
+0 0 1
+0 1 1
+0 1 2
+```
+
+递归: 根据题意当前值的下标为 m, 则其上一个数的下标为 m - 1 或者 m。
 
 ```js
 /**
@@ -48,13 +67,45 @@ Follow up: Could you do this using only O(n) extra space, where n is the total 
  * @return {number}
  */
 var minimumTotal = function(triangle) {
-  let result = 0
-  let pick = 0
-  for (let i = 0; i < triangle.length; i++) {
-    const smallerValue = triangle[i][pick + 1]
-      && (triangle[i][pick + 1] < triangle[i][pick]) ? triangle[i][pick + 1] : triangle[i][pick]
-    result += smallerValue
+  const result = getSmaller(triangle, 0, 0, 0)
+  return result
+}
+
+// m: witch row
+// n: witch column
+// curMin: current min value
+var getSmaller = function(triangle, m, n, curMin) {
+  if (m === triangle.length) {
+
+  }
+
+  const value1 = getSmaller(m + 1, n)
+  const value2 = getSmaller(m + 1, n + 1)
+
+  return value1 < value2 ? value1 : value2
+}
+```
+
+todo:
+
+```js
+/**
+ * @param {number[][]} triangle
+ * @return {number}
+ */
+var minimumTotal = function(triangle) {
+  for (let m = 0; m < triangle.length; m++) {
+
   }
   return result
 }
+```
+
+```js
+输入：
+[[-1],[2,3],[1,-1,-3]]
+输出：
+0
+预期：
+-1
 ```
